# ricora-attend2

./: .gitignore  RicoraAtnd2.hs  locale.yaml  locale.yml  ricora-atnd2.cabal  ricora-atnd2.hs  schema.sql
css/: style.css
templates/: default.tpl
